# macportsGCCfixup

./: .gitignore  CMakeLists.txt  GCC Generic.strings  GCC Generic.xcspec  GCC.strings  GCC.xcspec.in  Info.plist.gcc.in  Info.plist.llvmgcc.in  InfoPlist.strings  LLVM GCC.strings  LLVM_GCC.xcspec.in  README.md  config.h.in  configure  driverdriver.c  i386-g++-mp-version.in  i386-gcc-mp-version.in  version.plist  x86_64-g++-mp-version.in  x86_64-gcc-mp-version.in
